# FPath-Linux-WIn

./: README.md
sourse/: CMakeLists.txt  CMakePresets.json  main.cpp
sourse/FPath/: CMakeLists.txt  FPath.cpp  FPath.h
